--- a/src/styles/material-dashboard/_variables.scss
+++ b/src/styles/material-dashboard/_variables.scss
@@ -2,7 +2,7 @@
 @import "./colors";
 
 //  Brand Colors
-$brand-primary:                    $purple !default;
+$brand-primary:                    #e7ab3c !default;
 $brand-success:                    $green !default;
 $brand-danger:                     $red !default;
 $brand-warning:                    $orange !default;
